<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/layoutBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView style="@style/DDCompendium.TextViewTitle" />

            <EditText
                android:id="@+id/etUsername"
                style="@style/DDCompendium.EditText"
                android:layout_marginTop="15dp"
                android:autofillHints="username"
                android:hint="@string/email_username"
                android:inputType="text" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/DDCompendium.EditText"
                android:layout_marginTop="15dp"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <it.ddcompendium.customviews.ProgressBarButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:enabled="false"
                android:text="@string/login" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layoutFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutBody"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:paddingTop="100dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/et_borders_light" />

            <it.ddcompendium.customviews.TextViewButton
                android:id="@+id/noAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:subtitle="@string/sign_in"
                android:title="@string/no_account" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
