<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <RelativeLayout
                android:id="@+id/layoutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/layoutBody">

                <TextView style="@style/DDCompendium.TextViewTitle" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/etUsername"
                    style="@style/DDCompendium.EditText"
                    android:autofillHints="username"
                    android:background="@drawable/rounded_et"
                    android:hint="@string/email_username"
                    android:inputType="text" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etUsername">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:elevation="3dp"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/white"
                        android:visibility="invisible" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSend"
                        style="@style/DDCompendium.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/rounded_btn"
                        android:enabled="false"
                        android:text="@string/send"
                        android:textSize="14sp" />

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/layoutFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/et_borders_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:id="@+id/yesAccount1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes_account"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/yesAccount2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/log_in"
                android:textColor="@color/text_btn"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>